# Rota

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.dev.yml  example_script.py  pyproject.toml  requirements.txt  setup.py
requirements/: tests.txt
rota/: app.py
rota/adapters/: formatter.py  generator.py  output.py  user_input.py
rota/adapters/driven/: formatter.py  generator.py  output.py  storage.py  user_input.py
rota/adapters/driver/: app.py  cmd.py
rota/domain/: ports.py  rota.py
rota/domain/models/: calender.py  person.py
rota/ports/: data_generator.py  formatter.py  name_generator.py  output.py  storage.py  user_input.py
service/: app.py
service/business_logic/: calender.py
service/infrastructure/: formatter.py  output.py  user_input.py
service/ports/: generator.py  ports.py  rota.py
src/generate/: calender.py  rota.py  spreadsheet.py
src/rota.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/unit/adapters/: test_formatter.py  test_generators.py
tests/unit/adapters/driven/: test_formatter.py  test_generators.py
tests/unit/business_logic/: test_calender.py
tests/unit/domain/: test_rota.py
tests/unit/domain/models/: test_calender.py
tests/unit/generator/: test_calender.py  test_rota.py  test_spreadsheet.py
tests/unit/infrastructure/: test_formatter.py
tests/unit/ports/: test_generators.py  test_rota.py
