[tool.poetry]
name = "rota"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xlsxwriter = "^1.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
