[tool.poetry]
name = "rota"
version = "0.1.0"
description = "Generate Monthly Rotas"
authors = ["Ben"]

[tool.poetry.dependencies]
python = "^3.8"
xlsxwriter = "^1.2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
